# redlinebench

./: README.md
files/: README.md
redlinebench/: .gitignore  README.md  ai_side.py  baseline.py  negotiate.py  negotiate_v2.py  pyproject.toml  score.py
redlinebench/environments/redline_negotiate/: README.md  pyproject.toml  redline_negotiate.py
