[project]
name = "redline-negotiate"
description = "Multi-turn contract negotiation environment with verifiable reward function"
tags = ["multi-turn", "negotiation", "legal", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.14",
    "openai>=1.0.0",
    "datasets>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["redline_negotiate.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 8
rollouts_per_example = 3
